# kairos_final_project

./: README.md
Arduino/: Admission_sound.ino  Suction.ino
Arduino,esp32/: Suction.ino  display_serve.ino  step_moter.ino
PLC/: Last_PLC.state  Last_PLC.xgwx  Last_PLC.xgwx_bkx0
WebGLBuild/: admin.html  app(SAVE_noDB).py  app(SQLno).py  app.py  index(SAVE_noDB).html  index(SQLno).html  index.html  qr_generator.py  test.py
agv/devel/: .catkin  setup.sh
agv/devel/lib/pkgconfig/: yori.pc
agv/devel/lib/yori/: myagv_camera_publisher.py  optimized_camera_publisher.py
agv/src/: CMakeLists.txt
agv/src/dine_bot/: CMakeLists.txt  package.xml
agv/src/dine_bot/launch/: serving_robot_active.launch
agv/src/dine_bot/scripts/: line_trace.py  myagv_camera_publisher.py  optimized_camera_publisher.py
agv/src/yori/: CMakeLists.txt  package.xml
agv/src/yori/launch/: serving_robot_active.launch
agv/src/yori/scripts/: arduino_controller.py
computer/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
computer/log/: latest_build
computer/src/custom_msgs/: CMakeLists.txt  package.xml
computer/src/dine_bot/: package.xml  setup.cfg  setup.py
computer/src/dine_bot/dine_bot/: esp32_control_node.py  monitor_plc_node.py  mycobot_controller.py  nav2_controller.py  plate_distance_node.py  suction_cup_node.py  task_manager.py  testttt.py
computer/src/dine_bot/launch/: bringup_launch.py  cook_launch.py
computer/src/dine_bot/maps/: map.pgm
computer/src/dine_bot/params/: nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_custom_msgs/share/my_custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/yori/lib/yori/: db_manager_node  mycobot_controller
log/: latest_build
ros2(computer)/install/: local_setup.sh  setup.sh
ros2(computer)/log/: latest_build
ros2(computer)/src/my_custom_msgs/: CMakeLists.txt
ros2(computer)/src/yori/: setup.cfg  setup.py
src/yori/: package.xml  setup.py
src/yori/params/: nav2_params.yaml
src/yori/urdf/: myagv_up.dae
src/yori/yori/: db_manager.py  mycobot_controller.py  task_manager.py
(+356 files in other folders)
