<?xml version="1.0"?>
<package format="3">
  <name>yori</name>
  <version>0.0.0</version>
  <description>
    ROS 2 package for integrating Navigation2 (Nav2) functionalities.
  </description>
  <maintainer email="tnal1632@naver.com">soomi</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_core</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_amcl</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  
  <depend>mysql-connector-python</depend>
  <depend>my_custom_msgs</depend>


  <!-- Export section -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

